Working ok, but the http handler/router needs fixed.

--- a/views/index.gohtml
+++ b/views/index.gohtml
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 		<meta charset="utf-8">
-		<title>Semantic UI Sandbox</title>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/semantic.min.css">
+		<title>Thelma Heater</title>
+		<link rel="stylesheet" href="/css/semantic.min.css">
 		<style>
 			.large.text {
    				font-size: 2rem;
@@ -11,8 +11,8 @@
 		</style>
 </head>
 <body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/semantic.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="/js/semantic.min.js"></script>
+<script src="/js/chart.js"></script>
 
 <div class="ui container">
 <div class="ui one column grid">
